variables.RunHalf.scala.error
Compilation error:
RunHalf:13: error: ')' expected but '}' found.
	}
        ^