variables.RunHalf.scala.code
var orangeCount = 0
var baggleCount = 0

while (baggleCount != (orangeCount+1)/2{
  forward()
  if (isOverOrange){
    orangeCount = orangeCount + 1
  }
}

